[package]
name = "yuneta"
version = "0.1.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Yuneta in Rust. Migration of https://github.com/yuneta proyect to Rust. Work in progress."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
